--- a/themes/theme_dark.css
+++ b/themes/theme_dark.css
@@ -12,6 +12,10 @@ body, .main-frm {
     color: #949ba4;
 }
 
+.para {
+    color: #949ba4;
+}
+
 input[type="text"], input[type="password"] {
     background-color: #3f4147 !important;
     color: #dbdee1 !important;
@@ -106,11 +110,27 @@ input[type="text"], input[type="password"] {
 }
 
 .bandeau-page-haut {
-    background-color: #232428;
+    background-color: #1e1f22;
     border: none;
 }
 
 .bandeau-page-bas {
-    background-color: #313338;
+    background-color: #2b2b31;
     border: none;
+}
+
+.plaquette {
+    background-color: #313338;
+}
+
+.left-sidebar {
+    background-color: #2b2b31;
+}
+
+.left-sidebar .bouton-plat {
+    color: #949ba4;
+}
+
+.treeview__icone {
+    color: #949ba4;
 }
