--- a/themes/theme_dark.css
+++ b/themes/theme_dark.css
@@ -33,7 +33,7 @@ input[type="text"], input[type="password"] {
     text-decoration: none !important;
 }
 
-.bouton-plat:hover {
+:not(.treeview__elem) > .bouton-plat:hover {
     text-decoration: underline !important;
 }
 
@@ -146,6 +146,11 @@ input[type="text"], input[type="password"] {
     color: #949ba4;
 }
 
+.treeview__item:not([data-nohover]):hover {
+    background-color: #404249;
+    color: #dbdee1;
+}
+
 .combo2 > select[disabled] {
     color: #f2f3f5;
 }
@@ -156,4 +161,34 @@ input[type="text"], input[type="password"] {
 
 .combo2 > select[disabled] ~ .combo2__souligne {
     border-color: #3f4147;
+}
+
+.carte-menu {
+    background-color: #2b2b31;
+    border: none;
+    border-bottom: 1px solid #3f4147;
+}
+
+.tableres {
+    border: none;
+    border-radius: 3px;
+}
+
+.grid3 {
+    border-collapse: collapse;
+}
+
+.grid3__row > th {
+    background-color: #282a2e;
+    border-radius: 3px 3px 0 0;
+}
+
+.grid3__row:nth-child(2n + 1) > td,
+.grid3__row > td {
+    background-color: #282a2e;
+    border-top: 1px solid #3f4147;
+}
+
+.grid3__row:last-child > td {
+    border-radius: 0 0 3px 3px;
 }
